Fix overflow when file name is too long

--- a/public/forms/standardForm.css
+++ b/public/forms/standardForm.css
@@ -1,16 +1,12 @@
 .page-layout {
   display: flex;
   margin: 0 auto;
-  width: 100dvw;
-  height: 100dvh;
 }
 
 .content {
   flex: 1;
   display: flex;
   flex-direction: column;
-  min-width: min-content;
-  height: 100dvh;
 }
 
 .main-content {
@@ -20,8 +16,6 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  overflow-y: auto;
-  scroll-behavior: smooth;
 }
 
 .form-card {
