--- a/public/forms/uploadFile.css
+++ b/public/forms/uploadFile.css
@@ -1,16 +1,12 @@
 .page-layout {
   display: flex;
   margin: 0 auto;
-  width: 100dvw;
-  height: 100dvh;
 }
 
 .content {
   flex: 1;
   display: flex;
   flex-direction: column;
-  min-width: min-content;
-  height: 100dvh;
 }
 
 .main-content {
@@ -20,8 +16,6 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  overflow-y: auto;
-  scroll-behavior: smooth;
 }
 
 .form-card {
@@ -85,6 +79,7 @@
     background-color var(--transition-fast),
     transform var(--transition-fast);
   position: relative;
+  overflow: hidden;
 }
 
 .file-dropzone:hover,
@@ -127,10 +122,18 @@
 }
 
 .file-dropzone__text {
+  display: block;
   font-size: var(--font-size-sm);
   font-weight: 600;
   color: var(--color-text-main);
   margin-bottom: 0.25rem;
+  line-clamp: 2;
+  -webkit-line-clamp: 2;
+  max-width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-wrap: wrap;
+  text-overflow: ellipsis;
 }
 
 .file-dropzone__subtext {
@@ -230,7 +233,7 @@
 
 @media (max-width: 580px) {
   .form-card {
-    padding: 1.5rem;
+    padding: 1rem;
   }
 
   .form {
