--- a/public/global.css
+++ b/public/global.css
@@ -59,6 +59,24 @@
   outline-offset: 2px;
 }
 
+.page-layout {
+  width: 100%;
+  max-width: 100dvw;
+  height: 100dvh;
+}
+
+.content {
+  width: 100%;
+  height: 100%;
+  max-width: 100dvw;
+  max-height: 100dvh;
+}
+
+.main-content {
+  overflow-y: auto;
+  scroll-behavior: smooth;
+}
+
 html {
   scroll-behavior: smooth;
   -webkit-text-size-adjust: 100%;
