--- a/public/pages/home.css
+++ b/public/pages/home.css
@@ -1,24 +1,18 @@
 .page-layout {
   display: flex;
   margin: 0 auto;
-  width: 100vw;
-  height: 100dvh;
 }
 
 .content {
   flex: 1;
   display: flex;
   flex-direction: column;
-  min-width: min-content;
-  height: 100dvh;
 }
 
 .main-content {
   flex: 1;
   padding: 1.5rem 2.5rem;
   background-color: var(--color-bg-main);
-  overflow-y: auto;
-  scroll-behavior: smooth;
 }
 
 .main-content__header {
