--- a/public/pages/singleFile.css
+++ b/public/pages/singleFile.css
@@ -1,15 +1,12 @@
 .page-layout {
   display: flex;
   margin: 0 auto;
-  width: 100dvw;
-  height: 100dvh;
 }
 
 .content {
   flex: 1;
   display: flex;
   flex-direction: column;
-  height: 100dvh;
 }
 
 .main-content {
@@ -19,7 +16,6 @@
   background-color: var(--color-bg-main);
   flex-grow: 1;
   gap: 1.5rem;
-  overflow-y: auto;
 }
 
 .main-content__navigation {
@@ -48,6 +44,7 @@
   background-color: var(--color-bg-card);
   border: 1px solid var(--color-border);
   border-radius: var(--radius-lg);
+  min-height: min-content;
   overflow: hidden;
   box-shadow: var(--shadow-sm);
 }
@@ -133,8 +130,10 @@
 
 .file-viewer__meta {
   display: flex;
+  flex: 1;
   flex-direction: column;
   gap: 0.25rem;
+  max-width: 100%;
   min-width: 0;
 }
 
@@ -142,10 +141,12 @@
   font-size: var(--font-size-md);
   font-weight: 700;
   color: var(--color-text-main);
+  max-width: 100%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   text-wrap: wrap;
+  white-space: nowrap;
 }
 
 .file-viewer__size {
