--- a/public/pages/singleFolder.css
+++ b/public/pages/singleFolder.css
@@ -1,23 +1,18 @@
 .page-layout {
   display: flex;
   margin: 0 auto;
-  width: 100dvw;
-  height: 100dvh;
 }
 
 .content {
   flex: 1;
   display: flex;
   flex-direction: column;
-  height: 100dvh;
 }
 
 .main-content {
   padding: 1.5rem 2.5rem;
   background-color: var(--color-bg-main);
   flex-grow: 1;
-  overflow-y: auto;
-  scroll-behavior: smooth;
 }
 
 .main-content__header {
